# chinchilla_osdi2018

./: .gitignore  .gitmodules  .main-ai.ll.swm  Makefile  README.md  compile.sh  dissembler.c  dissembler.py  golden_ar_dino.0  golden_cem_dino.0  golden_cuckoo_dino.0  golden_rsa_dino.0  log.txt  main-ai.ll  main-m2r.ll  main.alpaca.ll  main.d  main.ll  templog.out
bld/: Makefile  Makefile.config
bld/alpaca/: debug.py  dissembler.py  main.bc  (+6 more)
experiment/: alpaca_parser  chinchilla_parser.py  chinchilla_parser2.py  rsa_50_15_alpaca.txt  rsa_50_15_chinchilla.txt
ext/edbprof/llvm/: .gitignore  AddIncFunc.cpp  AddIncFunc.h  BallLarusCfgViewer.cpp  BallLarusCfgViewer.h  BallLarusGraph.cpp  BallLarusGraph.h  BallLarusGraphTraits.h  BlockEnergyProfile.cpp  BlockEnergyProfile.h  BlockHash.cpp  BlockHash.h  BlockHashMap.cpp  BlockHashMap.h  BoundaryGenerator.cpp  BoundaryGenerator.h  BoundaryPlacer.cpp  BoundaryPlacer.h  CLI.cpp  CLI.h  CMakeLists.txt  CommaSeparatedValues.cpp  CommaSeparatedValues.h  CpuTimeStopWatch.cpp  CpuTimeStopWatch.h  DistExprEvaluator.cpp  DistExprEvaluator.h  EnergyDist.cpp  EnergyDist.h  FatalOptimizationFailure.h  GreedyBoundaryPlacer.cpp  GreedyBoundaryPlacer.h  Loops.cpp  Loops.h  Path.cpp  Path.h  PathEnergyEstimator.cpp  PathEnergyEstimator.h  PathEnergyPass.cpp  PathEnergyPass.h  (+12 more)
src/: Makefile  _main.c  _main_activity.c  _main_bitcount.c  _main_blowfish.c  _main_cuckoo.c  _main_indie.c  _main_interrupt.c  _main_rsa.c  _main_sleep.c  _main_small.c  _main_test.c  main.c  main_ar.c  main_bc.c  main_bc2.c  main_bf.c  main_blowfish.c  main_blowfish_small_alpaca.c  main_blowfish_small_chain.c  main_cem.c  main_conv.c  main_cuckoo.c  main_manual.c  main_matmult.c  main_qsort.c  main_rsa.c  main_small.c  main_strip.c  param.h  pins.h  test.out
(+264 files in other folders)
